--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:565px;
   line-height:1.6;
   text-align:justify;
 }
@@ -138,7 +138,7 @@ h1{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  padding-bottom:24px;
+  padding-bottom:28px;
   scroll-behavior:smooth;
   scrollbar-width:auto;
   scrollbar-color:#aaa transparent;
@@ -168,7 +168,7 @@ h1{
 }
 
 .project-card{
-  min-width:460px;
+  min-width:540px; /* 🔧 MÁS ANCHO */
   text-decoration:none;
   color:inherit;
   opacity:0;
@@ -182,8 +182,8 @@ h1{
 }
 
 .project-image{
-  height:260px;
-  margin-bottom:20px;
+  height:340px; /* 🔧 MÁS ALTA */
+  margin-bottom:24px;
   overflow:hidden;
 }
 
@@ -278,38 +278,13 @@ h1{
   color:#888;
 }
 
-/* ===== CONTACTO ===== */
+/* CONTACT */
 .contact{
   margin-top:48px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:24px;
   padding-left:8px;
-}
-
-.contact a{
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  padding:28px;
-  border-radius:20px;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  color:#f5f5f5;
-  text-decoration:none;
-  transition:.35s ease;
-}
-
-.contact a span{
-  font-size:12px;
-  letter-spacing:.18em;
-  text-transform:uppercase;
-  color:#888;
-}
-
-.contact a:hover{
-  transform:translateY(-4px);
-  box-shadow:0 20px 40px rgba(0,0,0,.35);
 }
 </style>
 </head>
@@ -345,8 +320,8 @@ h1{
         ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-        desde el periodo de desarrollo hasta la materialización terminal.
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de estudio hasta la materialización final.
       </p>
       <img src="foto.jpg" alt="">
     </div>
@@ -384,70 +359,6 @@ h1{
     </div>
   </div>
 </section>
-
-<!-- CV -->
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Jaume I</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Politècnica de València</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
-
-    </div>
-  </div>
-</section>
-
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">
-        +34 600 000 000
-        <span>Teléfono</span>
-      </a>
-      <a href="mailto:luis@example.com">
-        luis@example.com
-        <span>Email</span>
-      </a>
-      <a href="https://www.linkedin.com" target="_blank">
-        LinkedIn
-        <span>Perfil profesional</span>
-      </a>
-    </div>
-  </div>
-</section>
-
-<script>
-/* NAV */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
-
-/* OBSERVER */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
-
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
-
-/* TIMELINE LINE */
-const line=document.getElementById("timelineLine");
-const timeline=document.querySelector(".timeline");
-
-window.addEventListener("scroll",()=>{
-  const r=timeline.getBoundingClientRect();
-  const h=Math.min(window.innerHeight-r.top,r.height);
-  line.style.height=Math.max(0,h)+"px";
-});
-</script>
 
 </body>
 </html>
